# character-swap-workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKFLOWS_GUIDE.html  WORKFLOWS_GUIDE.md  pyproject.toml  ux-improvements.md
.claude/: launch.json
remotion/: README.md  build-preview.mjs  package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx  types.ts
scripts/: bench_remotion_concurrency.py  repair_scene_drift.py  restart-server.sh  swap_eval.py
src/character_swap/: __main__.py  api.py  (+31 more)
tests/: conftest.py  test_anthropic_image_block.py  test_app_shell_cache.py  test_assemble_coverage.py  test_broll_parser.py  test_capcut_templates.py  test_caption_cards_gap.py  test_caption_dialogue_label.py  test_caption_per_clip.py  test_character_background.py  test_character_language.py  test_character_primary_image.py  test_chat.py  test_clip_review_gate.py  test_compact_qc_rejects.py  test_compile_template_default.py  test_compile_voice.py  test_content_policy.py  test_cross_scene_consistency.py  test_dialogue_stage_directions.py  test_director_movement_payload.py  test_director_plan_cache.py  test_download_names.py  test_editor_adopt.py  test_editor_defaults.py  test_editor_persist_repurpose.py  test_elevenlabs_account_block.py  test_end_frames.py  test_end_pose_generation.py  test_exporter.py  test_extract_status.py  test_fal_grok.py  test_fal_kling.py  test_fal_kling_account_block.py  test_fal_seedance.py  test_fal_swap.py  test_fal_veed.py  test_fal_veo.py  test_from_images.py  test_higgsfield_swap.py  (+72 more)
web/: app.js  index.html
(+29 files in other folders)
