[project]
name = "character-swap"
version = "0.4.0"
description = "Character Swap Studio — web UI for scene/character image-to-image swaps with Grok Imagine video."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "tenacity>=9.0.0",
    "pillow>=10.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "typer>=0.12.3",
    "imageio-ffmpeg>=0.5.1",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "fal-client>=0.5.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
character-swap = "character_swap.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/character_swap"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP017"]
